syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/Ian-Balijawa/simplebank/pb";

message GetAccountAlertRequest {
    int64 account_id = 1;
}

message GetAccountAlertResponse {
    AccountAlert alert = 1;
}

message UpsertAccountAlertRequest {
    int64 account_id = 1;
    int64 low_balance_threshold = 2;
    int64 high_balance_threshold = 3;
}

message UpsertAccountAlertResponse {
    AccountAlert alert = 1;
}
